<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">CheckListView</string>
  <string name="site">https://github.com/federicoiosue/CheckListView</string>
  <string name="omninotes"><![CDATA[Checkout my app <b>Omni Notes</b>]]></string>
  <string name="omninotes_link">market://details?id=it.feio.android.omninotes</string>

  <string name="action_toggle_checklist">Convert</string>
  <string name="action_move_to_bottom">Move checked to bottom</string>
  <string name="template_phrase">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.\nUt enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.\n Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.\n Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
  <string name="settings">Settings</string>
  <string name="settings_lines_separator">Items separator</string>
  <string name="settings_lines_separator_summary">String to be used to separate text into checklist items (the default is "new line")</string>
  <string name="settings_show_hint_item">Show hint item</string>
  <string name="settings_show_hint_item_summary">Show or not an hint item on bottom of the checklist</string>
  <string name="settings_hint">Hint</string>
  <string name="settings_hint_summary">Phrase to fill the new empty line on bottom of the checklist</string>
  <string name="settings_checked_items_behavior">Checked items behavior</string>
  <string name="settings_checked_items_behavior_summary">What to do when an item is checked?</string>
  <string name="settings_keep_checked">Keep checked</string>
  <string name="settings_keep_checked_summary">Do not remove checked items when converting back to simple text</string>
  <string name="settings_show_checks">Checks symbols</string>
  <string name="settings_show_checks_summary">Show checks symbols when converting back to simple text (parsed also for converting again into checklist with previously edited checks)</string>
  <string name="settings_info">Info</string>
  <string name="settings_new_item_on_top_summary">Add new Item on top of the list</string>
  <string name="settings_new_item_on_top">New Item on top</string>

</resources>