<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2013 Federico Iosue (federico.iosue@gmail.com)
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.


-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <EditTextPreference
    android:key="settings_lines_separator"
    android:summary="@string/settings_lines_separator_summary"
    android:title="@string/settings_lines_separator" />

  <CheckBoxPreference
    android:defaultValue="true"
    android:key="settings_show_hint_item"
    android:summary="@string/settings_show_hint_item_summary"
    android:title="@string/settings_show_hint_item" />

  <EditTextPreference
    android:dependency="settings_show_hint_item"
    android:key="settings_hint"
    android:summary="@string/settings_hint_summary"
    android:title="@string/settings_hint" />

  <ListPreference
    android:defaultValue="0"
    android:entries="@array/checked_items_behavior"
    android:entryValues="@array/checked_items_behavior_values"
    android:key="settings_checked_items_behavior"
    android:summary="@string/settings_checked_items_behavior_summary"
    android:title="@string/settings_checked_items_behavior" />

  <CheckBoxPreference
    android:defaultValue="true"
    android:key="settings_keep_checked"
    android:summary="@string/settings_keep_checked_summary"
    android:title="@string/settings_keep_checked" />
  <CheckBoxPreference
    android:defaultValue="false"
    android:key="settings_show_checks"
    android:summary="@string/settings_show_checks_summary"
    android:title="@string/settings_show_checks" />
  <CheckBoxPreference
      android:defaultValue="false"
      android:key="settings_new_item_on_top"
      android:summary="@string/settings_new_item_on_top_summary"
      android:title="@string/settings_new_item_on_top" />

  <Preference android:title="@string/settings_info">
    <intent
      android:action="android.intent.action.VIEW"
      android:data="@string/site" />
  </Preference>

</PreferenceScreen>